# ibus-pskk

./: .gitignore  LICENSE  Makefile.am  NOTICE  README.md  autogen.sh  configure.ac  ibus-pskk.spec.in  justfile  requirements.txt
.github/workflows/: wiki-sync.yml
data/: default_user_config.json  org.freedesktop.ibus.engine.pskk.gschema.xml  pskk.xml
data/CRF_model_resources/: aozora_bunko_retrieval.py  mecab_sentence_processor.py
data/UniDic/: convert_UniDic_lex_csv_for_IME.py
data/crf_training/: bunsetsu.crfsuite  wagahai_neko_dearu-mecab_processed.txt
data/kanchoku_layouts/: aki_code.json
data/layout/: shingeta.json
data/layouts/: shingeta.json
data/skk_dict/: SKK-JISYO.M  SKK-JISYO.ML  SKK-JISYO.S
docs/: Background.md  Getting-Started.md  Home.md  en_Background.md  en_Configuration.md  en_Developer-Guide.md  en_Getting-Started.md  en_Home.md  en_User-Guide.md  transition_overview.ods
engine/: Makefile.am  config.json  dictionary.py  engine.py  event.py  ibus-engine-pskk.in  main.py  org.freedesktop.ibus.engine.pskk.gschema.xml.in  pskk.xml.in.in  test_engine.py  util.py.in.in
icons/: Makefile.am
layouts/: Makefile.am  roman.json  roomazi.json  shingeta.json
locales/: ibus-pskk.pot
locales/ja/LC_MESSAGES/: ibus-pskk.po
po/: POTFILES.in  ibus-pskk.pot  ja.po
setup/: Makefile.am  ibus-setup-pskk.desktop.in  ibus-setup-pskk.in.in  main.py  setup.glade  util.py  util.py.in.in
src/: conversion_model.py  crf_core.py  crf_train_cli.py  dictionary.py  engine.py  event.py  henkan.py  kanchoku.py  katsuyou.py  main.py  settings_panel.py  simultaneous_processor.py  user_dictionary_editor.py  util.py
tests/: test_kanchoku.py  test_katsuyou.py  test_simultaneous_processor.py  test_skk_dictionary.py  test_util.py
tools/: aozora_bunko_retrieval.py  keyboard_visualizer.py  mecab_sentence_processor.py  test_preedit_hints.py  wikipedia_annotated_corpus_processor.py
